# browser-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cdp.rs  commands.rs  fiber_walker.js  main.rs  runtime.rs  snapshot.rs  snapshot_tests.rs
