[package]
name = "browser-cli"
version = "0.1.0"
edition = "2024"
description = "Browser automation CLI using Chrome DevTools Protocol"

[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
